adding new collection and routes
